<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo2"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="462dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btncerrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btncolor1"
            android:onClick="cerrar"
            android:text="@string/btncerrar"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btneditar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btncolor1"
            android:onClick="cerrar"
            android:text="@string/btneditarp"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/perfilnombre"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="NOMBRE"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/perfilcelular"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="CELULAR"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnbarbero"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:backgroundTint="@color/btncolor1"
                android:onClick="cerrar"
                android:text="@string/btnperfilbarbers"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btncita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btncolor1"
                android:onClick="agendar"
                android:text="@string/btnperfillcitas"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnconsultar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:backgroundTint="@color/btncolor1"
                android:onClick="consultar"
                android:text="@string/btnconsultar"
                android:textColor="@color/black" />

        </LinearLayout>






    </LinearLayout>
</LinearLayout>